name:           netlist-to-verilog
version:        0.1
synopsis:       Convert a Netlist AST to a Verilog AST
description:    Convert a Netlist AST to a Verilog AST
category:       Language
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2010 Signali Corp.
author:         Philip Weaver
maintainer:     pweaver@signalicorp.com
package-url:    git://github.com/pheaver/netlist-verilog.git
build-type:     Simple
cabal-version:  >=1.6

flag base4
   Description: Compile using base-4 instead of base-3
   Default: True

Library
  ghc-options:          -Wall

  exposed-modules:      Language.Netlist.GenVerilog

  build-depends:        netlist == 0.2, verilog == 0.2

  if flag(base4)
     build-depends:   base == 4.*
  else
     build-depends:   base == 3.*

