name:           verilog
version:        0.2
synopsis:       Verilog AST and pretty printer
description:    Verilog AST and pretty printer -- parser to come later
category:       Language
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2010 Signali Corp.
author:         Philip Weaver
maintainer:     pweaver@signalicorp.com
package-url:    git://github.com/pheaver/netlist-verilog.git
build-type:     Simple
cabal-version:  >=1.6

flag base4
   Description: Compile using base-4 instead of base-3
   Default: True

Library
  ghc-options:          -Wall

  exposed-modules:      Language.Verilog.Syntax,
                        Language.Verilog.Syntax.Expression,
                        Language.Verilog.Syntax.Ident,
                        Language.Verilog.Syntax.AST,
                        Language.Verilog.Parser,
                        Language.Verilog.PrettyPrint,
                        Language.Verilog

  build-depends:      binary, pretty, parsec == 3.*, mtl
  if flag(base4)
     build-depends:   base == 4.*, syb
  else
     build-depends:   base == 3.*
